--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@angular/router": "^6.0.3",
     "@ng-bootstrap/ng-bootstrap": "^2.1.0",
     "core-js": "^2.5.4",
+    "ng2-smart-table": "^1.3.3",
     "rxjs": "^6.0.0",
+    "rxjs-compat": "^6.2.1",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
